manifests/overlays/sqlite/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlite-dep
spec:
  template:
    spec:
      containers:
        - name: dumbkv-container  # container name is a must for strategic patches
      volumes:
        - name: dumbkv-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
