manifests/overlays/sqlite/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlite-svc
spec:
  selector:
    type: sqlite
