manifests/overlays/sqlite/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  parentRefs:
    - name: dumbkv-gateway
      namespace: default
  hostnames:
    - shanana.shop
    - www.shanana.shop
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dumbkv-svc
          port: 8000
